--- a/package.json
+++ b/package.json
@@ -5,15 +5,22 @@
   "dependencies": {
     "@material-ui/core": "^3.1.1",
     "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
     "moment": "^2.22.2",
     "react": "^16.5.2",
+    "react-bootstrap": "^0.32.4",
+    "react-bootstrap-switch": "^15.5.3",
     "react-dom": "^16.5.2",
     "react-icons": "^3.1.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "react-switch-button": "^2.3.5",
+    "react-toggle-switch": "^3.0.4",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-rest-resource": "^0.19.2",
+    "redux-thunk": "^2.3.0",
+    "yarn": "^1.10.1"
   },
   "scripts": {
     "start": "react-scripts start",
