--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux": "^4.0.0",
     "redux-rest-resource": "^0.19.2",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^4.0.3",
     "yarn": "^1.10.1"
   },
   "scripts": {
@@ -27,5 +28,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
